Updated logrotate config with the working configuration

--- a/logrotate.conf
+++ b/logrotate.conf
@@ -1,8 +1,9 @@
 /var/lib/docker/containers/*/*.log {
+  missingok
   rotate 0
   copytruncate
   sharedscripts
-  maxsize 10M
+  size 10M
   postrotate
     rm -f /var/lib/docker/containers/*/*.log.*
   endscript
